attempt to fix stretched image on iPhone

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -114,10 +114,9 @@ nav p:hover {
     width:152px;
 }
 p img {
-    align-items:flex-start;
     margin-top:30px;
     width:100px;
-    height:max-content;
+    height:100px;
 }
 
 .item1 {grid-column: narrative;}
